--- a/src/pages/HREFerPage/HREFerPage.css
+++ b/src/pages/HREFerPage/HREFerPage.css
@@ -21,6 +21,16 @@
   top: 20%;
 }
 
+.email-options {
+  display: flex;
+  flex-direction: row;
+  gap: 1pc;
+  position: fixed;
+  left: 45%;
+  width: 10%;
+  top: 27.5%;
+  height: 5%;
+}
 
 .href-page-input {
   position: fixed;
